--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import 'tailwindcss';
+/*
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -77,3 +79,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*/
